# Schmate

./: .gitignore  .gitmodules  BITMASKS  BUILD  CMakeLists.txt  CMakeLists.txt.CHECKPOINT  NOTES  README.md  bert.cpp  ib
docs/: Mermaid  README  Schmate.key  handbook.latex  handbook.md
include/: AdaptiveSearchController.hpp  BertIndex.hpp  BertIndexManager.hpp  BertIndexManager.hpp.REF  ConfigBuilder.hpp  EfSearchTuner.hpp  Embedder.hpp  EmbedderFactory.hpp  EmbeddingIndexer.hpp  FileLock.hpp  FileStreamCache.hpp  GGUFParse.hpp  HNSWIndexCache.hpp  HnswConfig.hpp  IO.hpp  LRUCache.hpp  LRUCache.hpp.NEW  LSMVectorStorage.h  LlamaEmbedder.hpp  Logger.hpp  OffsetFile.hpp  ParseArgs.hpp  SBertGGML.hpp  Scoring.hpp  SentenceStore.hpp  ShardedIndex.hpp  StderrCapture.hpp  StringEmbedding.hpp  StringUtils.hpp  ThreadPool.hpp  Util.hpp  bert.h  bert.h.OLD  epsilonTuner.hpp  hf_mapper.hpp  hf_mapper_format.hpp  metafilter.hpp  unified-hnsw2.hpp  unified_hnsw.hpp
include/hnswlib/: Centroid  README.md  centroid_quant  cosine_similarity.h  hnswalg.h  hnswlib.h  int_storage.h  int_storage.h.OLD  l2_distance.h  normalize_vector  pearson_corr.h  quant_docs.md  quantized.h  space_ip.h  space_l1.h  space_l2.h  space_quantized.benchmarks  space_quantized.example  space_quantized.h  space_quantized.h.BACKUP  space_quantized.h.REF  space_quantized.h.WORKS  space_quantized_cosine.h  space_quantized_ip.h  stop_condition.h  sve_support.h
include/hnswlib/scratch/: INT  INT2  README.md  space_quantized.h.1  space_quantized.h.2  space_quantized.h.22  space_quantized.h.23  space_quantized.h.24  space_quantized.h.25  space_quantized.h.27  space_quantized.h.28  space_quantized.h.29  space_quantized.h.3  space_quantized.h.31  space_quantized.h.4  space_quantized.h.40  space_quantized.h.BROKEN  space_quantized.h.OLD  space_quantized.h.REF  space_quantized.h.SCALAR  space_quantized.h.XX  space_quantized_cosine.h  space_quantized_cosine_s.h
lib/: libsbert.2.dylib  libschmate.2.0.dylib
notes/: BERT-RUN  Cache.cpp  Conf.cpp  Configuration.cpp  Configuration2.cpp  ENERGY  IDEAS  Locks.cpp  MRL  MRL-IDEAS  Memory.cpp  Memory2.cpp  STDIO  STDIO.OLD  StringChecks.cpp  epsilon_test.cpp  fast_compression.cpp  intercept.c  meminfo.cpp  node.cpp  threadcount.cpp
src/: BertIndex.cpp  BertIndexManager.cpp  EmbedderFactory.cpp  EmbeddingIndexer.cpp  FileLock.cpp  FileStreamCache.cpp  HNSWIndexCache.cpp  HnswConfig.cpp  Logger.cpp  Logger.cpp.ORIG  OffsetFile.cpp  SBertGGML.cpp  ShardedIndex.cpp  StringEmbedding.cpp  Util.cpp  hf_mapper.cpp  main.cpp  unified_hnsw.cpp
tests/: quantization_benchmark25b.cpp  regression.cpp  run_test.sh  sentences  sentences-long  simple_test.cpp  sve_bridge_test_prog.cpp  test-pipe  test_gguf.cpp  test_reconstruct.cpp
tests/code/: README_test_data.md  example.cpp  test_data.cpp  test_data.hpp
unified/: 1  1.c  BENCH1  Benchmark  Int4.cpp  LSMVectorStorage  LSMVectorStorage-NEW-2.h  LSMVectorStorage-NEW.h  LSMVectorStorage.cpp  LSMVectorStorage.h  LSMVectorStorage.h.1Dec25  LSMVectorStorage.h.CANDIDATE  LSMVectorStorage.h.Nov25  Makefile  PROMPT  Q  RE-SCORING  READ.ME  VectorIndex.h  arm_sve_support.hpp  arm_test_prog.cpp  arm_test_prog_MT.cpp  benchmark  bridge  cosine  cosine_test.cpp  decompile  diagnostic2  example_usage  example_usage.cpp  hf_mapper  hf_mapper.hpp  hf_mapper_compile  hf_mapper_compile.cpp  hf_mapper_compile2  hfmodels  hnswlib  io.h  main  models.txt  (+12 more)
unified/scratch/: HFModelMapper.cpp  HFModelMapper.cpp.BAK  HFModelMapper.hpp  HFModelMapper.hpp.BAK  HFModelMapper.hpp.LINEAR  LSMVectorStorage.cpp  ModelPathStore.cpp  ModelPathStore.hpp  ModelPathStore.hpp.BAK  ModelPathStore.hpp.OLD  example_multivector_search  example_multivector_search.cpp  hfmodels_tool.cpp  modelstore_tool.cpp  quantization_benchmark.cpp  quantization_benchmark10.cpp  quantization_benchmark11.cpp  quantization_benchmark12.cpp  quantization_benchmark13.cpp  quantization_benchmark14.cpp  quantization_benchmark15.cpp  quantization_benchmark16.cpp  quantization_benchmark18.cpp  quantization_benchmark19.cpp  quantization_benchmark2.cpp  quantization_benchmark23.cpp  quantization_benchmark25.cpp  quantization_benchmark3.cpp  quantization_diagnostic.cpp  space_ip_neon.hpp  space_l2_neon.hpp  unified_hnsw.cpp.16Nov  unified_hnsw.hpp.16Nov  unified_hooks  unified_hooks.BAK  unified_hybrid.analysis  unified_hybrid.h.2  unified_hybrid.h.3  unified_vector.h.2  unified_vector.h.OLD
unified/zero/: LSMVectorStorage  LSMVectorStorage.cpp  LSMVectorStorage.h.ORIG
utils/: config_editor.cpp  hf_mapper_compile2.cpp  train_binary.cpp
